# filerepo

./: .gitignore  .npmignore  Cargo.toml  README.md  go.mod  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
cmd/filerepo/: cli.go  config_cmd.go  main.go
filerepo/: package.json
internal/cache/: store.go
internal/config/: config.go  config_test.go  state.go
internal/download/: downloader.go  manifest.go  options.go
internal/github/: api_types.go  catalog.go  client.go  errors.go  lfs.go  lfs_test.go  types.go  url.go  url_test.go
internal/ui/: clipboard.go  helpers.go  helpers_test.go  layout.go  layout_test.go  messages.go  model.go  persistence.go  render_test.go  repo_helpers.go  run.go  styles.go  tasks.go  types.go  update.go  update_browser.go  update_input.go  view_browser.go  view_input.go  view_loading.go  view_overlay.go
scripts/: install.js  install.ts
src/: config.rs  download.rs  github.rs  lib.rs  main.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: branding.rs  browser.rs  input.rs  mod.rs  overlay.rs  searching.rs  toast.rs
