[package]
name = "filerepo"
version = "1.0.0"
edition = "2024"
authors = ["byteHumi"]
description = "A beautiful TUI tool to browse, search, and download files from GitHub repositories"
license = "MIT"
keywords = ["github", "downloader", "tui", "rust", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
url = "2.5"
anyhow = "1.0"
dirs = "6.0"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
futures = "0.3"
